Fixed a bug with the timer when play again was clicked.

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                     <input type="text" id="username" name="username"><br>
                     <input type="submit" id="savescorebtn" name="submitusername" value="Save Score" onclick="saveHighScore(event)" disabled>
                 </form>
-                <button id="playagain" onclick="beginQuiz(event)">Play Again</button>
+                <button id="playagain">Play Again</button>
             </div>
             <div class="highscores" id="highscores">
                 <h1>.JavaScript(Quiz!) Hall of Fame</h1>
@@ -67,7 +67,7 @@
                     <p id="hof4">User 4</p>
                     <p id="hof5">User 5</p> -->
                 </div>
-                <button id="playagain" onclick="beginQuiz(event)">Play Again</button>
+                <button id="playagain2">Play Again</button>
                 <button id="clearscoresbtn" onclick="clearHighscores(event)">Clear Highscores</button>
             </div>
         </div>
