Updated styling for buttons.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="quizmain" id="quizmain">
             <div class="quizbody" id="quizbody">
                 <h1>.JavaScript(Quiz!);</h1>
-                <h3>Click start to begin the quiz. <br>You will have 1 minute to complete as many questions as possible.
+                <h3>Click start to begin the quiz. <br>You will have 1 minute to complete as many questions as possible. You will be subject to a 5 second penalty for any question answered incorrectly.
                 </h3>
                 <button id="startbtn">Start Quiz</button>
             </div>
